# mast3r

./: .gitignore  CHANGES_MACOS.md  FIX_EMPTY_POINTCLOUD.md  METAL_ACCELERATION_OPPORTUNITIES.md  README_MACOS.md  README_METALROPE.md  demo.py  install_uv.sh  kapture_mast3r_mapping.py  make_pairs.py  pyproject.toml  setup_macos.sh  test_macos.py  visloc.py
mast3r/: demo.py  demo_glomap.py  fast_nn.py
mast3r/cloud_opt/: sparse_ga.py
mast3r/metal_nn/: __init__.py  metal_nn.py  metal_nn_kernels.metal
mast3r/retrieval/: processor.py
